fix: remove flicker of untranslated strings in options page

--- a/css/options.css
+++ b/css/options.css
@@ -58,6 +58,16 @@
   border-color: darkgray;
 }
 
+/*
+ * Hide contents until it is ready / translated.
+ */
+:root > * {
+  transition: opacity 0.25s ease-out;
+}
+:root:not(.initialized) > * {
+  opacity: 0;
+}
+
 fieldset {
   padding: 0;
   border: none;
